--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "google/recaptcha": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
+        "laravel/passport": "^12.3",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5"
