--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,19 @@
     "require": {
         "php": "^8.1",
         "anhskohbo/no-captcha": "^3.6",
+        "barryvdh/laravel-dompdf": "^3.0",
+        "chillerlan/php-qrcode": "^5.0",
+        "endroid/qr-code": "^5.0",
         "google/recaptcha": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/passport": "^12.3",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "maatwebsite/excel": "^3.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "tcg/voyager": "^1.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
